# WorldX-Space-Skills

./: README.md
kapuscinski-style-evaluator/: README.md  SKILL.md
kapuscinski-style-evaluator/agents/: openai.yaml
kapuscinski-style-evaluator/docs/: SKILL.zh-CN.md  platform-notes.md
kapuscinski-style-evaluator/references/: corpus-inventory.yaml  craft-signals.md  debug-cases.md  gotchas.md  response-patterns.md
media-transcribe-public/: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
media-transcribe-public/skill/media-transcribe-public/: SKILL.md
media-transcribe-public/skill/media-transcribe-public/agents/: openai.yaml
media-transcribe-public/skill/media-transcribe-public/references/: gotchas.md
media-transcribe-public/src/media_transcribe_public/: __init__.py  cli.py
media-transcribe-public/tests/: test_backends.py  test_note_format.py
practical-ppt/: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md
practical-ppt/agents/: openai.yaml
practical-ppt/references/: proposal-proof-objects.md  qa-rubric.md  skill-principles.md  style-library.md
practical-ppt/scripts/: audit_pptx_template.py  check_html_slides.mjs  check_pptx_structure.py  check_pptx_text.py  html_to_pptx.mjs  spec_to_editable_pptx.mjs
