[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "media-transcribe-public"
version = "1.0.0"
description = "Local-first audio/video transcription to Markdown with pluggable note backends."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "media-transcribe contributors" }]
keywords = ["transcription", "whisper", "markdown", "obsidian", "codex-skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
zh = ["opencc-python-reimplemented>=0.1.7"]
diarization-cluster = ["numpy>=1.24", "scipy>=1.10", "scikit-learn>=1.3"]
diarization-pyannote = ["pyannote.audio>=3.1"]
dev = ["pytest>=8.0"]
all = [
  "openai>=1.0",
  "opencc-python-reimplemented>=0.1.7",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pyannote.audio>=3.1",
]

[project.scripts]
media-transcribe-public = "media_transcribe_public.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
